<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="application_name_generic">Gadgetbridge</string>
    <string name="title_activity_controlcenter_generic">Gadgetbridge</string>
    <string name="about_activity_title_generic">About Gadgetbridge</string>
    <string name="about_description_generic">Cloudless copylefted libre replacement for closed source Android gadget apps from vendors.</string>
    <string name="gadgetbridge_running_generic">Gadgetbridge running</string>
    <string name="application_name_banglejs_main">Bangle.js Gadgetbridge</string>
    <string name="title_activity_controlcenter_banglejs_main">Bangle.js Gadgetbridge</string>
    <string name="about_activity_title_banglejs_main">About Bangle.js Gadgetbridge</string>
    <string name="pref_header_general">General settings</string>
    <string name="pref_title_general_autoconnectonbluetooth">Connect to Gadgetbridge device when Bluetooth is turned on</string>
    <string name="pref_title_general_autostartonboot">Start automatically</string>
    <string name="pref_title_general_autoreconnect">Reconnect automatically</string>
    <string name="pref_title_audio_player">Preferred Audioplayer</string>
    <string name="pref_header_datetime">Date and Time</string>
    <string name="pref_title_datetime_syctimeonconnect">Sync time</string>
    <string name="pref_summary_datetime_syctimeonconnect">Sync time to Gadgetbridge device when connecting, and when time or time zone changes on Android device</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_minimize_priority">Hide the Gadgetbridge notification</string>
    <string name="pref_summary_minimize_priority_off">The icon in the status bar and the notification in the lockscreen are shown</string>
    <string name="pref_summary_minimize_priority_on">The icon in the status bar and the notification in the lockscreen are hidden</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications_call">Phone Calls</string>
    <string name="pref_title_support_voip_calls">Enable VoIP app calls</string>
    <string name="pref_title_notifications_sms">SMS</string>
    <string name="pref_title_notifications_timeout">Minimum time between notifications</string>
    <string name="pref_title_notifications_pebblemsg">Pebble Messages</string>
    <string name="pref_title_notifications_generic">Generic notification support</string>
    <string name="pref_title_whenscreenon">…also when screen is on</string>
    <string name="pref_title_notification_filter">Do Not Disturb</string>
    <string name="pref_summary_notification_filter">Block all notifications when Do Not Disturb is enabled on the phone</string>
    <string name="pref_title_transliteration">Transliteration</string>
    <string name="pref_summary_transliteration">Enable this if your device has no support for your language\'s font</string>
    <string name="pref_title_rtl">Right-To-Left</string>
    <string name="pref_summary_rtl">Enable this if your device can not show right-to-left languages</string>
    <string name="pref_rtl_max_line_length">Right-To-Left Max Line Length</string>
    <string name="pref_rtl_max_line_length_summary">Lengthens or shortens the lines Right-To-Left text is separated into</string>
    <string name="pref_header_privacy">Privacy</string>
    <string name="pref_title_call_privacy_mode">Call privacy mode</string>
    <string name="pref_title_weather">Weather</string>
    <string name="pref_title_weather_location">Weather location (for LineageOS weather provider)</string>
    <string name="pref_title_weather_summary">Used for the LineageOS weather provider, other Android versions need to use an app like \"Weather notification\". Find more information in the Gadgetbridge wiki.</string>
    <string name="pref_blacklist_calendars">Blacklist Calendars</string>
    <string name="pref_header_development">Developer options</string>
    <string name="pref_header_activitytrackers">Activity trackers</string>
    <string name="pref_title_pebble_activitytracker">Preferred activity tracker</string>
    <string name="pref_title_pebble_sync_health">Sync Pebble Health</string>
    <string name="pref_title_pebble_sync_misfit">Sync Misfit</string>
    <string name="pref_title_pebble_sync_morpheuz">Sync Morpheuz</string>
    <string name="pref_title_enable_outgoing_call">Support outgoing calls</string>
    <string name="pref_summary_enable_outgoing_call">Disabling this will also stop the Pebble 2/LE to vibrate on outgoing calls</string>
    <string name="pref_title_enable_pebblekit">Allow 3rd party Android App access</string>
    <string name="pref_summary_enable_pebblekit">Enable experimental support for Android apps using PebbleKit</string>
    <string name="pref_header_pebble_timeline">Pebble timeline</string>
    <string name="pref_title_sunrise_sunset">Sunrise and sunset</string>
    <string name="pref_summary_sunrise_sunset">Send sunrise and sunset times based on the location to the Pebble timeline</string>
    <string name="pref_title_enable_calendar_sync">Sync calendar</string>
    <string name="pref_summary_enable_calendar_sync">Send calendar events to the timeline</string>
    <string name="pref_title_pebble_privacy_mode">Privacy mode</string>
    <string name="pref_header_location">Location</string>
    <string name="pref_title_location_aquire">Acquire location</string>
    <string name="pref_title_location_latitude">Latitude</string>
    <string name="pref_title_location_longitude">Longitude</string>
    <string name="pref_title_location_keep_uptodate">Keep location updated</string>
    <string name="pref_summary_location_keep_uptodate">Try to get the current location at runtime, use the stored location as fallback</string>
    <string name="pref_title_pebble_forceprotocol">Force notification protocol</string>
    <string name="pref_summary_pebble_forceprotocol">This option forces using the latest notification protocol depending on the firmware version. KNOW WHAT YOU ARE DOING!</string>
    <string name="pref_title_pebble_forceuntested">Enable untested features</string>
    <string name="pref_summary_pebble_forceuntested">Enable untested features. KNOW WHAT YOU ARE DOING!</string>
    <string name="pref_title_pebble_forcele">Always prefer BLE</string>
    <string name="pref_summary_pebble_forcele">Use experimental Pebble LE support for all Pebbles, instead of BT classic. This requires pairing to non LE first, and then Pebble LE</string>
    <string name="pref_title_pebble_mtu_limit">Pebble 2/LE GATT MTU limit</string>
    <string name="pref_summary_pebble_mtu_limit">If your Pebble 2/Pebble LE does not work as expected, try this setting to limit the MTU (valid range 20–512)</string>
    <string name="pref_title_pebble_enable_applogs">Enable watch app logging</string>
    <string name="pref_title_pebble_gatt_clientonly">GATT client only</string>
    <string name="pref_summary_pebble_gatt_clientonly">This is for Pebble 2 only and experimental, try this if you have connectivity problems</string>
    <string name="pref_summary_pebble_enable_applogs">Will cause logs from watch apps to be logged by Gadgetbridge (requires reconnect)</string>
    <string name="pref_title_pebble_always_ack_pebblekit">Prematurely ACK PebbleKit</string>
    <string name="pref_summary_pebble_always_ack_pebblekit">Will cause messages that are sent to external 3rd party apps to be acknowledged always and immediately</string>
    <string name="pref_title_pebble_enable_bgjs">Enable background JS</string>
    <string name="pref_summary_pebble_enable_bgjs">When enabled, allows watchfaces to show weather, battery info etc.</string>
    <string name="pref_title_pebble_reconnect_attempts">Reconnection attempts</string>
    <string name="pref_display_add_device_fab">Connect new device button</string>
    <string name="pref_display_add_device_fab_on">Always visible</string>
    <string name="pref_display_add_device_fab_off">Visible only if no device is added</string>
    <string name="pref_title_unit_system">Units</string>
    <string name="pref_header_auto_export">Auto export</string>
    <string name="pref_title_auto_export_enabled">Auto export enabled</string>
    <string name="pref_title_auto_export_location">Export location</string>
    <string name="pref_title_auto_export_interval">Export interval</string>
    <string name="pref_summary_auto_export_interval">Export every %d hour</string>
    <string name="pref_header_auto_fetch">Auto fetch</string>
    <string name="pref_auto_fetch">Auto fetch activity data</string>
    <string name="pref_auto_fetch_summary">Fetch happens upon screen unlock. Only works if a lock mechanism is set!</string>
    <string name="pref_auto_fetch_limit_fetches">Minimum time between fetches</string>
    <string name="pref_auto_fetch_limit_fetches_summary">Fetches every %d minutes</string>
    <string name="pref_disable_new_ble_scanning">Disable new BLE scanning</string>
    <string name="pref_summary_disable_new_ble_scanning">Check this option if your device cannot be found during discovery</string>
    <string name="pref_write_logfiles">Write log files</string>
    <string name="miband_prefs_fitness_goal">Daily step target</string>
    <string name="activity_prefs_about_you">About you</string>
    <string name="activity_prefs_year_birth">Year of birth</string>
    <string name="activity_prefs_gender">Gender</string>
    <string name="activity_prefs_height_cm">Height in cm</string>
    <string name="activity_prefs_weight_kg">Weight in kg</string>
    <string name="activity_prefs_step_length_cm">Step length in cm</string>
    <string name="activity_prefs_charts">Chart settings</string>
    <string name="activity_prefs_sleep_duration">Preferred sleep duration in hours</string>
    <string name="activity_prefs_calories_burnt">Daily target: calories burnt</string>
    <string name="activity_prefs_distance_meters">Daily target: distance in meters</string>
    <string name="activity_prefs_activetime_minutes">Daily target: active time in minutes</string>
    <string name="pref_title_pebble_health_store_raw">Store raw record in the database</string>
    <string name="pref_summary_pebble_health_store_raw">Stores the data \"as is\", increasing the database usage to allow for later interpretation.</string>
    <string name="pref_title_contextual_arabic">Contextual Arabic</string>
    <string name="pref_summary_contextual_arabic">Enable this to support contextual Arabic</string>
    <string name="preferences_rtl_settings">Right To Left Support</string>
    <string name="language_and_region_prefs">Language and region settings</string>
    <string name="companiondevice_pairing">CompanionDevice Pairing</string>
    <string name="companiondevice_pairing_details">Enables the new CompanionDevice API support (only has an effect on Android 8 or above) which will increase reliability if the service needs to be restarted in the background, requires re-pairing using Gadgetbridge to have an effect</string>
    <string name="pref_check_permission_status">Check permission status</string>
    <string name="pref_check_permission_status_summary">Check and ask for missing permissions even when they might not be instantly needed. Disable this only if your devices actually doesn\'t support any of these features. Not granting a permission might cause issues!</string>
    <string name="ignore_bonded_devices">Ignore bonded devices</string>
    <string name="ignore_bonded_devices_description">Enabling this option will ignore devices that have been bonded/paired already when scanning</string>
</resources>