<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="pref_key_general"
        android:title="@string/pref_header_general">

        <PreferenceScreen
            android:key="pref_category_activity_personal"
            android:title="@string/activity_prefs_about_you">

            <EditTextPreference
                android:inputType="number"
                android:key="activity_user_year_of_birth"
                android:maxLength="4"
                android:title="@string/activity_prefs_year_birth" />

            <ListPreference
                android:defaultValue="2"
                android:entries="@array/gender"
                android:entryValues="@array/gender_values"
                android:key="activity_user_gender"
                android:title="@string/activity_prefs_gender"
                android:summary="%s" />

            <!--TODO: support localized heights and weights -->
            <EditTextPreference
                android:inputType="number"
                android:key="activity_user_height_cm"
                android:maxLength="3"
                android:title="@string/activity_prefs_height_cm" />

            <EditTextPreference
                android:inputType="number"
                android:key="activity_user_weight_kg"
                android:maxLength="3"
                android:title="@string/activity_prefs_weight_kg" />

            <EditTextPreference
                android:inputType="number"
                android:key="activity_user_step_length_cm"
                android:maxLength="3"
                android:title="@string/activity_prefs_step_length_cm" />

            <EditTextPreference
                android:icon="@drawable/ic_goal"
                android:defaultValue="10000"
                android:inputType="number"
                android:key="mi_fitness_goal"
                android:maxLength="5"
                android:title="@string/miband_prefs_fitness_goal" />

            <EditTextPreference
                android:inputType="number"
                android:key="activity_user_sleep_duration"
                android:maxLength="2"
                android:title="@string/activity_prefs_sleep_duration" />

            <EditTextPreference
                android:defaultValue="2000"
                android:inputType="number"
                android:key="activity_user_calories_burnt"
                android:maxLength="4"
                android:title="@string/activity_prefs_calories_burnt" />

            <EditTextPreference
                android:defaultValue="5"
                android:inputType="number"
                android:key="activity_user_distance_meters"
                android:maxLength="5"
                android:title="@string/activity_prefs_distance_meters" />

            <EditTextPreference
                android:defaultValue="60"
                android:inputType="number"
                android:key="activity_user_activetime_minutes"
                android:maxLength="3"
                android:title="@string/activity_prefs_activetime_minutes" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="language_category"
            android:title="@string/language_and_region_prefs">
            <ListPreference
                android:defaultValue="default"
                android:entries="@array/pref_language_options"
                android:entryValues="@array/pref_language_values"
                android:key="language"
                android:summary="%s"
                android:title="@string/pref_title_language" />
            <ListPreference
                android:defaultValue="metric"
                android:entries="@array/pref_entries_unit_system"
                android:entryValues="@array/pref_values_unit_system"
                android:key="measurement_system"
                android:summary="%s"
                android:title="@string/pref_title_unit_system" />
            <CheckBoxPreference
                android:layout="@layout/preference_checkbox"
                android:defaultValue="false"
                android:key="transliteration"
                android:summary="@string/pref_summary_transliteration"
                android:title="@string/pref_title_transliteration" />

            <PreferenceScreen
                android:title="@string/preferences_rtl_settings">
                <CheckBoxPreference
                    android:layout="@layout/preference_checkbox"
                    android:defaultValue="false"
                    android:key="rtl"
                    android:summary="@string/pref_summary_rtl"
                    android:title="@string/pref_title_rtl" />
                <CheckBoxPreference
                    android:layout="@layout/preference_checkbox"
                    android:defaultValue="false"
                    android:key="contextualArabic"
                    android:summary="@string/pref_summary_contextual_arabic"
                    android:title="@string/pref_title_contextual_arabic" />
                <EditTextPreference
                    android:inputType="number"
                    android:key="rtl_max_line_length"
                    android:defaultValue="20"
                    android:maxLength="159"
                    android:title="@string/pref_rtl_max_line_length"
                    android:summary="@string/pref_rtl_max_line_length_summary"/>
            </PreferenceScreen>
        </PreferenceScreen>

        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="general_autostartonboot"
            android:title="@string/pref_title_general_autostartonboot" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="general_autocreconnect"
            android:title="@string/pref_title_general_autoreconnect" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="general_autoconnectonbluetooth"
            android:title="@string/pref_title_general_autoconnectonbluetooth" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="display_add_device_fab"
            android:summaryOff="@string/pref_display_add_device_fab_off"
            android:summaryOn="@string/pref_display_add_device_fab_on"
            android:title="@string/pref_display_add_device_fab" />

        <ListPreference
            android:defaultValue="default"
            android:key="audio_player"
            android:title="@string/pref_title_audio_player"
            android:summary="%s" />
        <ListPreference
            android:key="pref_key_theme"
            android:title="@string/pref_title_theme"
            android:entries="@array/pref_theme_options"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="@string/pref_theme_value_light"
            android:summary="%s" />

        <PreferenceScreen
            android:title="@string/pref_title_weather"
            android:summary="@string/pref_title_weather_summary">

            <EditTextPreference
                android:inputType="text"
                android:key="weather_city"
                android:title="@string/pref_title_weather_location" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="minimize_priority"
            android:summaryOff="@string/pref_summary_minimize_priority_off"
            android:summaryOn="@string/pref_summary_minimize_priority_on"
            android:title="@string/pref_title_minimize_priority" />


    </PreferenceCategory>

    <Preference
        android:key="pref_charts"
        android:title="@string/activity_prefs_charts"/>

    <PreferenceCategory
        android:key="pref_key_datetime"
        android:title="@string/pref_header_datetime">
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="datetime_synconconnect"
            android:summary="@string/pref_summary_datetime_syctimeonconnect"
            android:title="@string/pref_title_datetime_syctimeonconnect" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_notifications"
        android:title="@string/pref_header_notifications">

        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="notification_mode_calls_bool"
            android:title="@string/pref_title_notifications_call" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="notification_support_voip_calls_bool"
            android:title="@string/pref_title_support_voip_calls" />

        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="notification_mode_sms_bool"
            android:title="@string/pref_title_notifications_sms"/>

        <Preference
            android:key="pref_key_blacklist"
            android:title="@string/pref_title_notifications_apps" />

        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="notification_mode_pebblemsg_bool"
            android:title="@string/pref_title_notifications_pebblemsg" />

        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="notifications_generic_whenscreenon"
            android:title="@string/pref_title_whenscreenon" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/notifications_timeout"
            android:entryValues="@array/notifications_timeout_values"
            android:key="notifications_timeout"
            android:title="@string/pref_title_notifications_timeout"
            android:summary="%s" />

        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="notification_filter"
            android:summary="@string/pref_summary_notification_filter"
            android:title="@string/pref_title_notification_filter" />

        <Preference
            android:key="pref_key_filters"
            android:title="@string/pref_filters" />

        <Preference
            android:key="notifications_generic"
            android:title="@string/pref_title_notifications_generic" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_privacy">
    <ListPreference
        android:defaultValue="@string/p_call_privacy_mode_off"
        android:key="pref_call_privacy_mode"
        android:title="@string/pref_title_call_privacy_mode"
        android:entries="@array/pref_call_privacy_mode"
        android:entryValues="@array/pref_call_privacy_mode_values"
        android:summary="%s" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preferences_category_service_specific_settings">

        <EditTextPreference
                android:key="ifttt_webhooks_key"
                android:title="@string/pref_title_ifttt_webhooks_key" />
    </PreferenceCategory>



    <PreferenceCategory
        android:title="@string/pref_header_auto_export">
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="auto_export_enabled"
            android:title="@string/pref_title_auto_export_enabled" />
        <Preference
            android:key="auto_export_location"
            android:title="@string/pref_title_auto_export_location"
            android:summary="%s" />
        <EditTextPreference
            android:inputType="number"
            android:key="auto_export_interval"
            android:defaultValue="3"
            android:maxLength="3"
            android:title="@string/pref_title_auto_export_interval"
            android:summary="@string/pref_summary_auto_export_interval"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_auto_fetch">
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="auto_fetch_enabled"
            android:title="@string/pref_auto_fetch"
            android:summary="@string/pref_auto_fetch_summary"/>
        <EditTextPreference
            android:inputType="number"
            android:key="auto_fetch_interval_limit"
            android:defaultValue="0"
            android:maxLength="3"
            android:title="@string/pref_auto_fetch_limit_fetches"
            android:summary="@string/pref_auto_fetch_limit_fetches_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_development"
        android:title="@string/pref_header_development">
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="log_to_file"
            android:title="@string/pref_write_logfiles" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="permission_pestering"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_check_permission_status_summary"
            android:title="@string/pref_check_permission_status" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="ignore_bonded_devices"
            android:summary="@string/ignore_bonded_devices_description"
            android:title="@string/ignore_bonded_devices" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="disable_new_ble_scanning"
            android:summary="@string/pref_summary_disable_new_ble_scanning"
            android:title="@string/pref_disable_new_ble_scanning" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_companiondevice_pairing"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/companiondevice_pairing_details"
            android:title="@string/companiondevice_pairing" />

    </PreferenceCategory>
</PreferenceScreen>
