<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_general">
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="pebble_enable_outgoing_call"
            android:summary="@string/pref_summary_enable_outgoing_call"
            android:title="@string/pref_title_enable_outgoing_call" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="false"
            android:key="pebble_enable_pebblekit"
            android:summary="@string/pref_summary_enable_pebblekit"
            android:title="@string/pref_title_enable_pebblekit" />
        <EditTextPreference
            android:defaultValue="12"
            android:inputType="number"
            android:key="pebble_reconnect_attempts"
            android:maxLength="4"
            android:title="@string/pref_title_pebble_reconnect_attempts" />
        <!--
                        <CheckBoxPreference
                    android:layout="@layout/preference_checkbox"
                            android:defaultValue="false"
                            android:key="autoremove_notifications"
                            android:summary="@string/pref_summary_autoremove_notifications"
                            android:title="@string/pref_title_autoremove_notifications" />
        -->
        <ListPreference
            android:key="pebble_pref_privacy_mode"
            android:title="@string/pref_title_pebble_privacy_mode"
            android:entries="@array/pebble_privacymode"
            android:entryValues="@array/pebble_privacymode_values"
            android:defaultValue="@string/p_pebble_privacy_mode_off"
            android:summary="%s" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_pebble_timeline">
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="enable_calendar_sync"
            android:summary="@string/pref_summary_enable_calendar_sync"
            android:title="@string/pref_title_enable_calendar_sync" />
        <Preference
            android:key="pref_key_blacklist_calendars"
            android:title="@string/pref_blacklist_calendars" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:key="send_sunrise_sunset"
            android:summary="@string/pref_summary_sunrise_sunset"
            android:title="@string/pref_title_sunrise_sunset" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_activitytrackers">
        <ListPreference
            android:defaultValue="4"
            android:entries="@array/pebble_activitytracker"
            android:entryValues="@array/pebble_activitytracker_values"
            android:key="pebble_activitytracker"
            android:summary="%s"
            android:title="@string/pref_title_pebble_activitytracker" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="pebble_sync_health"
            android:title="@string/pref_title_pebble_sync_health" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="pebble_health_store_raw"
            android:dependency="pebble_sync_health"
            android:title="@string/pref_title_pebble_health_store_raw"
            android:summary="@string/pref_summary_pebble_health_store_raw" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="pebble_sync_misfit"
            android:title="@string/pref_title_pebble_sync_misfit" />>
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:key="pebble_sync_morpheuz"
            android:title="@string/pref_title_pebble_sync_morpheuz" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_location">
        <Preference
            android:key="location_aquire"
            android:title="@string/pref_title_location_aquire"/>
        <EditTextPreference
            android:maxLength="7"
            android:inputType="numberDecimal|numberSigned"
            android:defaultValue="0"
            android:key="location_latitude"
            android:title="@string/pref_title_location_latitude" />
        <EditTextPreference
            android:maxLength="7"
            android:inputType="numberDecimal|numberSigned"
            android:defaultValue="0"
            android:key="location_longitude"
            android:title="@string/pref_title_location_longitude" />
        <CheckBoxPreference
            android:layout="@layout/preference_checkbox"
            android:defaultValue="true"
            android:dependency="location_aquire"
            android:key="use_updated_location_if_available"
            android:summary="@string/pref_summary_location_keep_uptodate"
            android:title="@string/pref_title_location_keep_uptodate" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_development">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pebble_force_protocol"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_pebble_forceprotocol"
            android:title="@string/pref_title_pebble_forceprotocol" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pebble_force_untested"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_pebble_forceuntested"
            android:title="@string/pref_title_pebble_forceuntested" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pebble_force_le"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_pebble_forcele"
            android:title="@string/pref_title_pebble_forcele" />
        <EditTextPreference
            android:inputType="number"
            android:key="pebble_mtu_limit"
            android:maxLength="3"
            android:defaultValue="512"
            android:title="@string/pref_title_pebble_mtu_limit"
            android:summary="@string/pref_summary_pebble_mtu_limit" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pebble_gatt_clientonly"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_pebble_gatt_clientonly"
            android:title="@string/pref_title_pebble_gatt_clientonly" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pebble_enable_applogs"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_pebble_enable_applogs"
            android:title="@string/pref_title_pebble_enable_applogs" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pebble_always_ack_pebblekit"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_pebble_always_ack_pebblekit"
            android:title="@string/pref_title_pebble_always_ack_pebblekit" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pebble_force_untested"
            android:key="pebble_enable_background_javascript"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_pebble_enable_bgjs"
            android:title="@string/pref_title_pebble_enable_bgjs" />
        <EditTextPreference
            android:digits="0123456789."
            android:key="pebble_emu_addr"
            android:maxLength="15"
            android:title="Emulator IP" />
        <EditTextPreference
            android:inputType="number"
            android:key="pebble_emu_port"
            android:maxLength="5"
            android:title="Emulator Port" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
